<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/view"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pref"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/corzao"

        >


        <RadioButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/Vermelho"
           android:id="@+id/Vermelho"
           android:checked="false"
           />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Azul"
            android:id="@+id/Azul"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Verde"
            android:id="@+id/Verde"
            android:checked="false"
            />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Salvei"
        android:id="@+id/salvei"
        android:onClick="salvar"
        android:layout_marginTop="15dp"
        />

</LinearLayout>